Some minor improvements in object allocations.